Todos os testes para cobertura acima de 80% do CI / CD realizados , total de 125 testes realizados